# ArithExe

./: .gitignore  CMakeLists.txt  README.md  arithexe.xml  driver.py  lemma.smt2  requirements.txt  solver.py  solver_worker.py  test.py  z3reader.py
benchmark/: test.c
benchmark/array/: test.c
benchmark/bounded-cfinite/: bcf_01_square_invariant_b20.c  bcf_01_square_invariant_b20.yml  bcf_01_square_invariant_bmax.c  bcf_01_square_invariant_bmax.yml  bcf_03_unipotent_chain3.yml  bcf_04_quadratic_accumulator.c  bcf_04_quadratic_accumulator.yml  bcf_05_square_sum_shift.yml  bcf_06_cubic_invariant_b20.c  bcf_06_cubic_invariant_b20.yml  bcf_06_cubic_invariant_bmax.c  bcf_06_cubic_invariant_bmax.yml  bcf_07_mixed_quadratic_invariant.yml  bcf_07_mixed_quadratic_invariant_b1000.yml  bcf_07_mixed_quadratic_invariant_b20.c  bcf_08_three_variable_invariant.c  bcf_08_three_variable_invariant.yml  bcf_09_weighted_linear_phi.c  bcf_09_weighted_linear_phi.yml  bcf_09_weighted_linear_phi_b20.c  bcf_09_weighted_linear_phi_b20.yml  bcf_09_weighted_linear_phi_bmax.c  bcf_10_quartic_invariant.c  bcf_10_quartic_invariant_b1000.yml  bcf_10_quartic_invariant_b20.yml  bcf_10_quartic_invariant_bmax.c  bcf_10_quartic_invariant_bmax.yml
benchmark/loops/: test.c  test2.c  test3.c
benchmark/multi/: test1.c  test2.c  test3.c  test4.c  test5.c
benchmark/recursive/: add.c  addition.c  distri.c  even_odd.c  gcd.c  id.c  mult.c
include/: Witness.h  engine.h  logics.h  rec_solver.h
lib/: AInstruction.cpp  AInstruction.h  AStack.cpp  AStack.h  AnalysisManager.cpp  AnalysisManager.h  CMakeLists.txt  Expr.cpp  Expr.h  FunctionSummarizer.cpp  FunctionSummarizer.h  FunctionSummary.cpp  FunctionSummary.h  LinearAlgebra.h  LoopSummarizer.cpp  LoopSummarizer.h  LoopSummary.cpp  LoopSummary.h  MStack.cpp  MStack.h  Memory.cpp  Memory.h  MemoryObject.cpp  MemoryObject.h  SymbolTable.cpp  SymbolTable.h  Witness.cpp  cache.cpp  cache.h  common.cpp  common.h  config.json  engine.cpp  function_summary.cpp  function_summary.h  function_summary_utils.cpp  function_summary_utils.h  logics.cpp  logics.h  old_Memory.cpp  (+4 more)
rec_solver/: README.md  poly_expr_experiment.py
rec_solver/examples/: bounded_cfinite_map.txt
rec_solver/rec_solver/: __init__.py
rec_solver/rec_solver/core/: bounded_cfinite.py  multivariate.py  poly_expr.py  recurrence.py  solver.py  ultimately_periodic.py
rec_solver/rec_solver/rec_parser/: lexer.py
test/: CMakeLists.txt  gen_test.py  test_algebra.cpp  test_engine.cpp  test_logic.cpp  test_witness.cpp
test/benchmark/arrays/loop/: false_1.c  true_1.c  true_12.c  true_13.c  true_15.c  true_2.c  true_3.c  true_4.c  true_5.c  true_6.c
test/benchmark/arrays/loop_free/: false_1.c  false_2.c  true_1.c  true_2.c
test/benchmark/bounded-cfinite/: README.md  bcf_01_square_invariant.yml  bcf_01_square_invariant_b1000.c  bcf_01_square_invariant_b1000.yml  bcf_02_shift_shear_conjugate.c  bcf_02_shift_shear_conjugate.yml  bcf_03_unipotent_chain3.c  bcf_05_square_sum_shift.c  bcf_06_cubic_invariant.c  bcf_06_cubic_invariant.yml  bcf_06_cubic_invariant_b1000.c  bcf_06_cubic_invariant_b1000.yml  bcf_07_mixed_quadratic_invariant.c  bcf_07_mixed_quadratic_invariant_b1000.c  bcf_07_mixed_quadratic_invariant_b20.yml  bcf_07_mixed_quadratic_invariant_bmax.c  bcf_07_mixed_quadratic_invariant_bmax.yml  bcf_09_weighted_linear_phi_b1000.c  bcf_09_weighted_linear_phi_b1000.yml  bcf_09_weighted_linear_phi_bmax.yml  bcf_10_quartic_invariant.yml  bcf_10_quartic_invariant_b1000.c  bcf_10_quartic_invariant_b20.c  generate_bound_variants.py  manifest.json
test/benchmark/loop_free/: false_1.c  false_2.c  true_1.c  true_2.c  true_3.c  true_4.c
test/benchmark/loops/: assert.h  false_1.c  false_nondet.c  true_1.c  true_10.c  true_11.c  true_12.c  true_2.c  true_3.c  true_4.c  true_5.c  true_6.c  true_8.c  true_9.c  true_bounded_cfinite_map_fixed.c  true_bounded_cfinite_map_symbolic.c  true_ghost_initial.c  true_nested_affine_dependent.c
test/benchmark/nla/: true_1.c  true_2.c  true_3.c  true_4.c  true_5.c  true_nested_bounded_cfinite.c
test/benchmark/ptr/: false_1.c  true_1.c
test/benchmark/recursion/: false_1.c  false_2.c  false_3.c  false_4.c  true_1.c  true_11.c  true_12.c  true_13.c  true_14.c  true_15.c  true_16.c  true_17.c  true_18.c  true_19.c  true_2.c  true_3.c  true_4.c  true_7.c  true_8.c  true_9.c
tmp/: closed.smt2  recurrence.txt
tools/: CMakeLists.txt  arith_exe.cpp  run_regression.py
