add_library(AInstruction AInstruction.cpp)
add_library(AStack AStack.cpp)
add_library(engine engine.cpp)
add_library(state state.cpp)
add_library(rec_solver rec_solver.cpp)
add_library(FunctionSummarizer FunctionSummarizer.cpp)
add_library(FunctionSummary FunctionSummary.cpp)
add_library(LoopSummarizer LoopSummarizer.cpp)
add_library(LoopSummary LoopSummary.cpp)
add_library(AnalysisManager AnalysisManager.cpp)
add_library(logics logics.cpp)

target_link_libraries(engine PRIVATE spdlog::spdlog)
target_link_libraries(state PRIVATE spdlog::spdlog)
target_link_libraries(rec_solver PRIVATE spdlog::spdlog)
target_link_libraries(FunctionSummary PRIVATE spdlog::spdlog)
target_link_libraries(FunctionSummarizer PRIVATE spdlog::spdlog)
target_link_libraries(LoopSummary PRIVATE spdlog::spdlog)
target_link_libraries(LoopSummarizer PRIVATE spdlog::spdlog)
target_link_libraries(AStack PRIVATE spdlog::spdlog)
target_link_libraries(AInstruction PRIVATE spdlog::spdlog)
target_link_libraries(AnalysisManager PRIVATE spdlog::spdlog)
target_link_libraries(logics PRIVATE spdlog::spdlog)